fixed spacing on mobile day

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1606,7 +1606,7 @@ div#calendar-nav-pager .calendar-nav-pager-back {
     .view-item.view-item-mobile_calendar {
         padding: 10px 20px;
     }
-    .view.view-mobile-calendar.view-id-mobile_calendar .views-row {
+    .views-row {
         padding: 10px 20px;
         margin: 0px;
     }
